Дочистить ConversionService после рефакторинга